build/00006/H4P_CrowdedHouse_pico.log
Processing pico (platform: https://github.com/maxgerhardt/platform-raspberrypi.git#5b72058658ebaf98045755662bc8b28479bd288b; framework: arduino; board: rpipicow)
--------------------------------------------------------------------------------
Verbose mode can be enabled via `-v, --verbose` option
CONFIGURATION: https://docs.platformio.org/page/boards/raspberrypi/rpipicow.html
PLATFORM: Raspberry Pi RP2040 (1.14.0+sha.5b72058) > Pico W
HARDWARE: RP2040 133MHz, 256KB RAM, 2MB Flash
DEBUG: Current (blackmagic) External (blackmagic, cmsis-dap, jlink, picoprobe, raspberrypi-swd)
PACKAGES: 
 - framework-arduinopico @ 1.40101.0+sha.9d17f42 
 - tool-picotool-rp2040-earlephilhower @ 5.140200.240929 (14.2.0) 
 - toolchain-rp2040-earlephilhower @ 5.140200.240929 (14.2.0)
Converting H4P_CrowdedHouse.ino
Flash size: 2.00MB
Sketch size: 1.50MB
Filesystem size: 0.50MB
PSRAM size: 0.00MB
Maximium Sketch size: 1568768 EEPROM start: 0x101ff000 Filesystem start: 0x1017f000 Filesystem end: 0x101ff000
LDF: Library Dependency Finder -> https://bit.ly/configure-pio-ldf
LDF Modes: Finder ~ deep+, Compatibility ~ soft
Found 72 compatible libraries
Scanning dependencies...
Dependency Graph
|-- H4 @ 4.0.9+sha.6f2f510
|-- H4Tools @ 0.0.16+sha.47ce091
|-- H4AsyncTCP @ 0.0.25+sha.231be9d
|-- H4AsyncMQTT @ 1.0.0-rc12+sha.9d2b784
|-- ArmadilloHTTP @ 0.1.9+sha.ac5bf86
|-- H4AsyncWebServer @ 0.0.12+sha.95236bc
|-- H4Plugins @ 3.5.7+sha.0ad6c2a
|-- LittleFS @ 0.1.0
|-- WiFi @ 1.0.0
|-- lwIP_CYW43 @ 1
|-- lwIP-Ethernet @ 1
|-- SPI @ 1.0
|-- Updater @ 1.0
|-- MD5Builder @ 1.0.0
|-- LEAmDNS @ 1.2
|-- DNSServer @ 1.1.1
|-- ArduinoOTA @ 1.0
|-- HTTPUpdate @ 1.3
|-- HTTPClient @ 1.2
Building in release mode
Compiling .pio/build/pico/src/H4P_CrowdedHouse.ino.cpp.o
Compiling .pio/build/pico/libe2d/H4AsyncWebServer/H4AT_HTTPHandlerWS.cpp.o
Compiling .pio/build/pico/FrameworkArduino/SerialUSB.cpp.o
.pio/libdeps/pico/H4AsyncWebServer/src/H4AT_HTTPHandlerWS.cpp:32:9: fatal error: H4ASyncWebServer.h: No such file or directory
**************************************************************************
* Looking for H4ASyncWebServer.h dependency? Check our library registry!
*
* CLI  > platformio lib search "header:H4ASyncWebServer.h"
* Web  > https://registry.platformio.org/search?q=header:H4ASyncWebServer.h
*
**************************************************************************
   32 | #include<H4ASyncWebServer.h>
      |         ^~~~~~~~~~~~~~~~~~~~
compilation terminated.
*** [.pio/build/pico/libe2d/H4AsyncWebServer/H4AT_HTTPHandlerWS.cpp.o] Error 1
In file included from /home/runner/work/h4plugins/h4plugins/build/pico/src/H4P_CrowdedHouse.ino:1:
.pio/libdeps/pico/H4Plugins/src/H4Plugins.h:6:76: note: '#pragma message: Using Wifi AP - Make sure you have made arrangements!'
    6 |     #pragma message("Using Wifi AP - Make sure you have made arrangements!")
      |                                                                            ^
/home/runner/work/h4plugins/h4plugins/build/pico/src/H4P_CrowdedHouse.ino:4:1: error: 'h4pRoamingH4' does not name a type
    4 | h4pRoamingH4 crow("squawk");
      | ^~~~~~~~~~~~
/home/runner/work/h4plugins/h4plugins/build/pico/src/H4P_CrowdedHouse.ino:5:1: error: 'h4pRoamingH4' does not name a type
    5 | h4pRoamingH4 master("master");
      | ^~~~~~~~~~~~
/home/runner/work/h4plugins/h4plugins/build/pico/src/H4P_CrowdedHouse.ino:6:1: error: 'h4pRoamingH4' does not name a type
    6 | h4pRoamingH4 earth("middle");
      | ^~~~~~~~~~~~
/home/runner/work/h4plugins/h4plugins/build/pico/src/H4P_CrowdedHouse.ino:7:1: error: 'h4pRoamingH4' does not name a type
    7 | h4pRoamingH4 landing("landing");
      | ^~~~~~~~~~~~
/home/runner/work/h4plugins/h4plugins/build/pico/src/H4P_CrowdedHouse.ino:8:1: error: 'h4pRoamingH4' does not name a type
    8 | h4pRoamingH4 salon("salon");
      | ^~~~~~~~~~~~
/home/runner/work/h4plugins/h4plugins/build/pico/src/H4P_CrowdedHouse.ino:9:1: error: 'h4pRoamingH4' does not name a type
    9 | h4pRoamingH4 clok("ntpclock");
      | ^~~~~~~~~~~~
/home/runner/work/h4plugins/h4plugins/build/pico/src/H4P_CrowdedHouse.ino:11:1: error: 'h4pRoamingDotLocal' does not name a type
   11 | h4pRoamingDotLocal dot("H3","smb","tcp"); // my satellite TV receiver
      | ^~~~~~~~~~~~~~~~~~
/home/runner/work/h4plugins/h4plugins/build/pico/src/H4P_CrowdedHouse.ino:12:1: error: 'h4pRoamingDotLocal' does not name a type
   12 | h4pRoamingDotLocal box("box","http","tcp"); // my main pc
      | ^~~~~~~~~~~~~~~~~~
/home/runner/work/h4plugins/h4plugins/build/pico/src/H4P_CrowdedHouse.ino:14:1: error: 'h4pRoamingIP' does not name a type
   14 | h4pRoamingIP htc("HTC","192.168.1.252");
      | ^~~~~~~~~~~~
/home/runner/work/h4plugins/h4plugins/build/pico/src/H4P_CrowdedHouse.ino:15:1: error: 'h4pRoamingIP' does not name a type
   15 | h4pRoamingIP elvis("Elvis","192.168.1.31");
      | ^~~~~~~~~~~~
/home/runner/work/h4plugins/h4plugins/build/pico/src/H4P_CrowdedHouse.ino:19:49: error: no matching function for call to 'H4P_WiFi::H4P_WiFi(const char [9], const char [9], const char [9])'
   19 | H4P_WiFi h4wifi("XXXXXXXX","XXXXXXXX","detector");
      |                                                 ^
In file included from .pio/libdeps/pico/H4Plugins/src/H4P_AsyncMQTT.h:34,
                 from .pio/libdeps/pico/H4Plugins/src/H4Plugins.h:10:
.pio/libdeps/pico/H4Plugins/src/H4P_WiFi.h:133:9: note: candidate: 'H4P_WiFi::H4P_WiFi(const std::string&)'
  133 |         H4P_WiFi(const std::string& device=""):
      |         ^~~~~~~~
.pio/libdeps/pico/H4Plugins/src/H4P_WiFi.h:133:9: note:   candidate expects 1 argument, 3 provided
.pio/libdeps/pico/H4Plugins/src/H4P_WiFi.h:63:7: note: candidate: 'H4P_WiFi::H4P_WiFi(const H4P_WiFi&)'
   63 | class H4P_WiFi: public H4Service, public H4AsyncWebServer {
      |       ^~~~~~~~
.pio/libdeps/pico/H4Plugins/src/H4P_WiFi.h:63:7: note:   candidate expects 1 argument, 3 provided
.pio/libdeps/pico/H4Plugins/src/H4P_WiFi.h:63:7: note: candidate: 'H4P_WiFi::H4P_WiFi(H4P_WiFi&&)'
.pio/libdeps/pico/H4Plugins/src/H4P_WiFi.h:63:7: note:   candidate expects 1 argument, 3 provided
*** [.pio/build/pico/src/H4P_CrowdedHouse.ino.cpp.o] Error 1
========================== [FAILED] Took 4.99 seconds ==========================
Environment    Status    Duration
-------------  --------  ------------
pico           FAILED    00:00:04.989
==================== 1 failed, 0 succeeded in 00:00:04.989 ====================